--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "extra-equator",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.3.4",
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.1.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
-  }
+	"name": "extra-equator",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro check && astro build",
+		"preview": "astro preview",
+		"astro": "astro",
+		"format": "prettier -w ."
+	},
+	"dependencies": {
+		"@astrojs/check": "^0.3.4",
+		"@astrojs/tailwind": "^5.1.0",
+		"astro": "^4.1.1",
+		"prettier": "^3.1.1",
+		"prettier-plugin-astro": "^0.12.3",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.3.3"
+	}
 }
