--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.3.4",
+		"@astrojs/mdx": "^2.0.3",
 		"@astrojs/tailwind": "^5.1.0",
 		"astro": "^4.1.1",
 		"prettier": "^3.1.1",
